--- a/Slovak/main/MiuiScanner.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiScanner.apk/res/values-sk/strings.xml
@@ -595,77 +595,81 @@
     <string name="yesterday">Včera</string>
     <string name="you_id">"Vaše ID: "</string>
 	
-    <string name="all_text">Full text</string>
-    <string name="already_ocr_result">Selected items automatically</string>
-    <string name="continue_video">Scan</string>
-    <string name="copy_text_fail">Copy failed, please open the clipboard permission</string>
-    <string name="copy_text_faile">"Couldn't copy. Allow Scanner to access the clipboard first."</string>
-    <string name="crop_and_create">Cropping and creating Excel file…</string>
-    <string name="dis_select_all">Deselect all</string>
-    <string name="document_ocr_fail_no_text">"Couldn't recognize text. Select again and start over."</string>
-    <string name="document_region_tips">Auto select</string>
-    <string name="editor_form">Edit</string>
-    <string name="error_not_found_excel_activity">"Couldn't find an app to open Excel files"</string>
-    <string name="examples_form_guide">How to scan tables</string>
-    <string name="examples_text_guide">How to scan text</string>
-    <string name="form_demo_dialog_negative">Tap to scan the table, then export as an Excel file.</string>
-    <string name="form_excel_save_sucess">Saved Excel file successfully</string>
-    <string name="form_recognition_crop_hint">Make sure the corners of the table are inside the selected area</string>
-    <string name="history_list_is_empty2">Documents you scan will appear here.</string>
-    <string name="how_to_scan_form">How to scan tables</string>
-    <string name="immediately_try">Scan</string>
-    <string name="immediately_try_video">Scan</string>
-    <string name="intelligent_participle">Phrases</string>
-    <string name="module_title_form">Table</string>
-    <string name="module_title_new_document">Scan doc</string>
-    <string name="not_identification_form">"Couldn't recognize table. Select again and start over."</string>
-    <string name="not_network">"Couldn't connect to the network. Wait a minute or two and try again."</string>
-    <string name="ocr_plant_loading">Just a sec…</string>
-    <string name="open_file_error">"Couldn't open file"</string>
-    <string name="recognition_form_fail_10010">"Error 010: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_1003">"Error 003: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_1005">"Error 005: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_1006">"Error 006: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_1007">"Error 007: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_1008">"Error 008: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_400">"Error 400: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_40010004">"Error 0004: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_40021101">"Error 1101: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_40021102">"Error 1102: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_403">"Couldn't recognize. This file is too big."</string>
-    <string name="recognition_form_fail_50021100">"Error 1100: Couldn't recognize. Wait a minute or two and try again."</string>
-    <string name="recognition_form_fail_50021102">"Couldn't recognize table. Select again and start over."</string>
-    <string name="recognition_form_fail_504">Request timed out. Wait a minute or two and try again.</string>
-    <string name="recognition_historical_date_create_time">"Created on "</string>
-    <string name="recognition_historical_no_document">Nothing here yet.</string>
-    <string name="recognition_historical_no_form">Nothing here yet.</string>
-    <string name="recognition_historical_no_text">Nothing here yet.</string>
-    <string name="recognition_history">History</string>
-    <string name="save_excel_result_title">Save</string>
-    <string name="save_excel_title">Save Excel file</string>
-    <string name="save_word">Save</string>
-    <string name="scan_document_top_tip">Scan a physical document and create a PDF</string>
-    <string name="scan_document_top_tip_second">Scan multiple documents and create one PDF</string>
-    <string name="scan_form">Scan table</string>
-    <string name="scan_form_top_tip">Scan, save, and edit tables</string>
-    <string name="scan_general_top_tip">Recognize plants, people, and products</string>
-    <string name="scan_support_type_new">Scan QR code or barcode</string>
-    <string name="scan_text">Scan text</string>
-    <string name="scan_text_top_tip">Recognize and copy text</string>
-    <string name="scan_translate_top_tip">Translate all text in a photo</string>
-    <string name="screenshot_copy_text">Copy text</string>
-    <string name="screenshot_save_image">Save image</string>
-    <string name="screenshot_save_image_error">"Couldn't save image"</string>
-    <string name="screenshot_save_image_success">Saved image successfully</string>
-    <string name="screenshot_shared_image">Share image</string>
-    <string name="screenshot_translation_running">Translating…</string>
-    <string name="share_error">"Couldn't share"</string>
-    <string name="text_extraction_demo_dialog_title">Tap to recognize and copy text</string>
-    <string name="to_date">Today</string>
-    <string name="translate_export">Export</string>
-    <string name="translate_long_screen">Scrolling translation</string>
-    <string name="use_presentation_file">Demo</string>
-    <string name="view_origin_text">Original text</string>
-    <string name="word_is_being_saved">Saving Word document…</string>
-    <string name="word_save_sucess">Saved Word document successfully</string>	
+
+<string name="all_text">Úplný text</string>
+    <string name="already_ocr_result">Automaticky vybraté položky</string>
+    <string name="continue_video">Skenovať</string>
+    <string name="copy_text_fail">Kopírovanie zlyhalo, otvorte prosím povolenie schránky</string>
+    <string name="copy_text_faile">Nepodarilo sa kopírovať. Najprv povoľte skeneru prístup do schránky.</string>
+    <string name="crop_and_create">Orezanie a vytvorenie súboru Excel…</string>
+    <string name="dis_select_all">Zrušiť výber všetkých</string>
+    <string name="document_ocr_fail_no_text">Nepodarilo sa rozpoznať text. Vyberte znova a začnite odznova.</string>
+    <string name="document_region_tips">Automatický výber</string>
+    <string name="editor_form">Upraviť</string>
+    <string name="error_not_found_excel_activity">Nepodarilo sa nájsť aplikáciu na otvorenie súborov programu Excel</string>
+    <string name="examples_form_guide">Ako skenovať tabuľky</string>
+    <string name="examples_text_guide">Ako skenovať text</string>
+    <string name="form_demo_dialog_negative">Dotykom naskenujte tabuľku a potom exportujte ako súbor programu Excel.</string>
+    <string name="form_excel_save_sucess">Súbor programu Excel bol úspešne uložený</string>
+    <string name="form_recognition_crop_hint">Uistite sa, že rohy tabuľky sú vo vybranej oblasti</string>
+    <string name="history_list_is_empty2">Tu sa zobrazia dokumenty, ktoré naskenujete.</string>
+    <string name="how_to_scan_form">Ako skenovať tabuľky</string>
+    <string name="immediately_try">Skenovať</string>
+    <string name="immediately_try_video">Skenovať</string>
+    <string name="intelligent_participle">Frázy</string>
+    <string name="module_title_form">Tabuľka</string>
+    <string name="module_title_new_document">Skenovať dokument</string>
+    <string name="not_identification_form">Nepodarilo sa rozpoznať tabuľku. Vyberte znova a začnite odznova.</string>
+    <string name="not_network">Nepodarilo sa pripojiť k sieti. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="ocr_plant_loading">Načítavanie...</string>
+    
+<string name="open_file_error">Súbor sa nepodarilo otvoriť</string>
+    <string name="recognition_form_fail_10010">Chyba 010: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_1003">Chyba 003: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_1005">Chyba 005: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_1006">Chyba 006: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_1007">Chyba 007: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_1008">Chyba 008: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_400">Chyba 400: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_40010004">Chyba 0004: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_40021101">Chyba 1101: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_40021102">Chyba 1102: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_403">Nepodarilo sa rozpoznať. Tento súbor je príliš veľký.</string>
+    <string name="recognition_form_fail_50021100">Chyba 1100: Nepodarilo sa rozpoznať. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_form_fail_50021102">Nepodarilo sa rozpoznať tabuľku. Vyberte znova a začnite odznova.</string>
+    <string name="recognition_form_fail_504">Časový limit žiadosti vypršal. Počkajte minútu alebo dve a skúste to znova.</string>
+    <string name="recognition_historical_date_create_time">"Vytvorené dňa "</string>
+    <string name="recognition_historical_no_document">Zatiaľ tu nič nie je.</string>
+    <string name="recognition_historical_no_form">Zatiaľ tu nič nie je.</string>
+    <string name="recognition_historical_no_text">Zatiaľ tu nič nie je.</string>
+    <string name="recognition_history">História</string>
+    <string name="save_excel_result_title">Uložiť</string>
+    <string name="save_excel_title">Uložiť súbor programu Excel</string>
+    <string name="save_word">Uložiť</string>
+    <string name="scan_document_top_tip">Naskenujte fyzický dokument a vytvorte súbor PDF</string>
+    <string name="scan_document_top_tip_second">Naskenujte viacero dokumentov a vytvorte jeden PDF</string>
+    <string name="scan_form">Skenovať tabuľku</string>
+    <string name="scan_form_top_tip">Skenujte, ukladajte a upravujte tabuľky</string>
+    <string name="scan_general_top_tip">Rozpoznávanie rastlín, ľudí a produktov</string>
+    <string name="scan_support_type_new">Naskenujte QR kód alebo čiarový kód</string>
+    <string name="scan_text">Naskenovať text</string>
+    <string name="scan_text_top_tip">Rozpoznať a skopírovať text</string>
+    <string name="scan_translate_top_tip">Preložiť celý text na fotografii</string>
+    <string name="screenshot_copy_text">Kopírovať text</string>
+    <string name="screenshot_save_image">Uložiť obrázok</string>
+    <string name="screenshot_save_image_error">Obrázok sa nepodarilo uložiť</string>
+    <string name="screenshot_save_image_success">Obrázok bol úspešne uložený</string>
+    <string name="screenshot_shared_image">Zdieľať obrázok</string>
+    <string name="screenshot_translation_running">Prekladá sa…</string>
+    <string name="share_error">Nepodarilo sa zdieľať</string>
+    <string name="text_extraction_demo_dialog_title">Klepnutím rozpoznáte a skopírujete text</string>
+    <string name="to_date">Dnes</string>
+    <string name="translate_export">Exportovať</string>
+    <string name="translate_long_screen">Preklad posúvania</string>
+    <string name="use_presentation_file">Ukážka</string>
+    <string name="view_origin_text">Pôvodný text</string>
+    <string name="word_is_being_saved">Ukladá sa dokument programu Word…</string>
+    <string name="word_save_sucess">Dokument programu Word bol úspešne uložený</string>
+    
+ 
 </resources>
