--- a/Slovak/main/Health.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Health.apk/res/values-sk/strings.xml
@@ -863,8 +863,8 @@ Ak nechcete zdieľať svoje informácie, môžete túto funkciu vypnúť."</stri
     <string name="month_december"> december </string>
     <string name="month_december_short"> dec </string>
     <string name="month_december_shortest"> dec </string>
-    <string name="month_feb February"> február </string>
-    <string name="month_feb February_short"> február </string>
+    <string name="month_february"> február </string>
+    <string name="month_february_short"> február </string>
     <string name="month_february_shortest"> feb </string>
     <string name="month_january"> január </string>
     <string name="month_january_short"> Jan </string>
