--- a/Slovak/main/SecurityCoreAdd.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCoreAdd.apk/res/values-sk/strings.xml
@@ -513,4 +513,8 @@ si zaslúži vlastnú aplikáciu"</string>
     <string name="xspace_uninstalling">Odinštalovanie...</string>
     <string name="xspace_whatsapp_title">WhatsApp</string>
     <string name="yesterday">Včera</string>
+    
+<string name="alwaysUsePrompt">Zapamätať voľbu</string>
+    <string name="xspace_head">Klonovaná aplikácia</string>
+    <string name="xspace_resolver_activity_title">Vybrať aplikáciu</string>        
 </resources>
