--- a/Slovak/main/Settings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/strings.xml
@@ -7690,4 +7690,6 @@ Nastavenie telefónu môže vyžadovať prenos významného množstva dát."</st
      <string name="google_assistant_guide_title">Asistent Google</string>
      <string name="miui_bubbles_notification">Bubliny upozornení</string>
      <string name="miui_bubbles_notification_status_opened">Zapnuté</string>
+	 
+    <string name="nrca_need_reset">Reštartujte zariadenie pre použitie zmien</string>	 
 </resources>
